# debian-x11-apps

bitmap/: Makefile.in  aclocal.m4  configure
bitmap/man/: Makefile.in
debian/: autogen.sh  changelog  control  copyright.head  rules  watch.bitmap  watch.oclock  watch.rendercheck  watch.transset  watch.x11perf  watch.xbiff  watch.xcalc  watch.xclipboard  watch.xclock  watch.xconsole  watch.xcursorgen  watch.xditview  watch.xedit  watch.xeyes  watch.xgc  watch.xload  watch.xlogo  watch.xmag  watch.xman  watch.xmore  watch.xwd  watch.xwud  x11-apps.install
debian/patches/: series
rendercheck/: ChangeLog  Makefile.in  configure  configure.ac  t_gradient.c
rendercheck/man/: Makefile.am  Makefile.in
transset/: ChangeLog  Makefile.in  aclocal.m4  configure  configure.ac  transSet.c
transset/man/: Makefile.in
xcursorgen/: ChangeLog  Makefile.in  aclocal.m4  configure
xcursorgen/man/: Makefile.in
